# ShaderTestFrameworkExamples

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: BuildAndRunTests.yml
shader/: ShaderHeader.hlsli  ShaderTest.hlsl
test/: Catch2Tests.cpp
